--- a/config/modprobe/hid_apple.conf
+++ b/config/modprobe/hid_apple.conf
@@ -1,2 +1,6 @@
+# Make function keys work normally by default.
+# Set fnmode to 1 to turn function keys into media keys by default
 options hid_apple fnmode=2
-options hid_apple iso_layout=0
+
+# Disable hardcoded ISO-layout of the keyboard.
+# options hid_apple iso_layout=0
